[project]
name = "robustrag"
version = "0.1.0"
description = "Local RAG pipeline with cache support"
authors = [
    {name = "GentleClash",email = "ayushbajpai016@gmail.com"}
]
license = {text = "GNU AFFERO GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "docling (>=2.42.2,<3.0.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
